# sp500-market-breadth-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: init_data.py  pyproject.toml  run.py  update_constituents.py
backend/app/: database.py  main.py  models.py  scheduler.py
backend/app/api/: admin.py  breadth.py  call_skew.py  cot.py  fng.py  global_markets.py  indicators.py  market_prices.py  panic_strategy.py  three_signals.py  vix.py
backend/app/services/: calculator.py  call_skew.py  constituents.py  cot_fetcher.py  fetcher.py  fng_fetcher.py  global_markets.py  market_prices.py  panic_strategy.py  sp500.py  three_signals.py  vix_fetcher.py
backend/tests/: test_global_markets.py  test_panic_strategy.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css  types.ts
frontend/src/components/: AdminTabs.tsx  AppHeader.tsx  BreadthChart.tsx  BullLogo.tsx  CallSkewChart.tsx  CapeChart.tsx  CotChart.tsx  DailyStatusTable.tsx  FngChart.tsx  GlobalMarketTicker.tsx  IndicatorCard.tsx  LogPanel.tsx  MarketPriceChartPanel.tsx  MarketRulesSection.tsx  PanicStrategyPanel.tsx  QqqDrawdownChart.tsx  SentimentCard.tsx  SignalCard.tsx  SignalHistory.tsx  StatusBadge.tsx  ThreeSignalPanel.tsx  TradingDecisionPanel.tsx  VixChart.tsx
scripts/: cloudflare_ipv6_ddns.py  cloudflare_ipv6_ddns.sh  cloudflare_tunnel.sh  com.stock-dashboard.cloudflare-ddns.plist.example  com.stock-dashboard.cloudflare-tunnel.plist.example  com.stock-dashboard.server.plist.example  stock_dashboard_server.sh
(+8 files in other folders)
