[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.1",
    "lxml>=6.1.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.47.0",
    "yfinance>=1.3.0",
]
